Rendering a map with Google Maps

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgLmMpKCzveJf1_yuA0fUzzhy0WRChvZA" async defer>
+  </script>
+
+  <!-- OpenLayers  -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v7.5.2/css/ol.css"
+    type="text/css">
+  <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v7.5.2/build/ol.js"></script> -->
 </head>
 
 <body>
